[package]
name = "sha2"
version = "0.10.8"
description = """
Pure Rust implementation of the SHA-2 hash function family
including SHA-224, SHA-256, SHA-384, and SHA-512.
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/sha2"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "sha2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.10.7"
cfg-if = "1.0"

# xous-specific dependencies
xous = { version = "0.9.57", optional = true }
log-server = { package = "xous-api-log", version = "0.1.53", optional = true }
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.53", optional = true }
xous-names = { package = "xous-api-names", version = "0.9.55", optional = true }
log = { version = "0.4.14", optional = true }
susres = { package = "xous-api-susres", version = "0.9.53", optional = true }

xous-ipc = { version = "0.9.57", optional = true }
num-derive = { version = "0.3.3", default-features = false, optional = true }
num-traits = { version = "0.2.14", default-features = false, optional = true }
rkyv = { version = "0.4.3", default-features = false, features = [
    "const_generics",
], optional = true }
utralib = { version = "0.1.24", optional = true, default-features = false }
rand = { version = "0.8.5", optional = true }
crypto-common = { version = "0.1.6", optional = true }


[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"
sha2-asm = { version = "0.6.1", optional = true }

[dev-dependencies]
digest = { version = "0.10.7", features = ["dev"] }
hex-literal = "0.2.2"

[features]
precursor = [
    "xous",
    "log",
    "log-server",
    "xous-names",
    "susres",
    "xous-ipc",
    "num-derive",
    "num-traits",
    "rkyv",
    "utralib/precursor",
    "rand",
    "crypto-common",
]
hosted = [
    "xous",
    "log",
    "log-server",
    "xous-names",
    "susres",
    "xous-ipc",
    "num-derive",
    "num-traits",
    "rkyv",
    "utralib/hosted",
    "rand",
    "crypto-common",
]
renode = [
    "xous",
    "log",
    "log-server",
    "xous-names",
    "susres",
    "xous-ipc",
    "num-derive",
    "num-traits",
    "rkyv",
    "renode/hosted",
    "rand",
    "crypto-common",
]
default = ["std"]
std = ["digest/std"]
oid = ["digest/oid"] # Enable OID support. WARNING: Bumps MSRV to 1.57
asm = [
    "sha2-asm",
] # WARNING: this feature SHOULD NOT be enabled by library crates
# Use assembly backend for LoongArch64 targets
# WARNING: Bumps MSRV to 1.72. This feature SHOULD NOT be enabled by library crates
loongarch64_asm = []
compress = []         # Expose compress functions
force-soft = []       # Force software implementation
asm-aarch64 = ["asm"] # DEPRECATED: use `asm` instead

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
